<resources>
    <string name="app_name">NextLabs</string>
    <string name="prompt_username">USERNAME</string>
    <string name="prompt_domainserver">DOMAIN</string>
    <string name="prompt_selectprofile">SELECT A PROFILE</string>
    <string name="prompt_url">URL</string>
    <string name="add_account">Add...</string>

    <string name="right_view">View</string>
    <string name="right_classify">Classify</string>

    <string name="file_attribute">File Properties</string>
    <string name="attribute_done">Done</string>
    <string name="attribute_rights">Rights</string>

    <string name="back">Back</string>
    <string name="tag">Tag</string>
    <string name="classification">Classification</string>
    <string name="protect">Protect</string>
    <string name="share">Share</string>
    <string name="PROTECT">PROTECT</string>
    <string name="PROTECT_AND_SHARE">PROTECT AND SHARE</string>
    <string name="apply_file">Apply Digital Right to:</string>
    <string name="content">Content:</string>
    <string name="collaboration">Collaboration:</string>
    <string name="effect">Effect:</string>
    <string name="cb_view">View</string>
    <string name="cb_edit">Edit</string>
    <string name="cb_print">Print</string>
    <string name="cb_share">Share</string>
    <string name="cb_download">Download</string>
    <string name="cb_watermark">Watermark/Overlay</string>
    <string name="Reclassify">Reclassify</string>
    <string name="edit">Edit</string>
    <string name="tenantId">Tenant ID:</string>
    <string name="action_settings">Settings</string>
    <string name="profile_settings">Settings</string>
    <string name="repository_details">Repository Detail</string>
    <string name="profile_account">My Account</string>
    <string name="profile_help">Help</string>
    <string name="profile_signoff">Sign Out</string>

    <string name="title_activity_profile_setting">ProfileSettingActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile_account">ProfileAccountActivity</string>
    <string name="session_timeout">Session Timeout</string>

    <!--fields for supported repository activity UI-->
    <string name="connected_services">Connected Services:</string>
    <string name="add_service">Add Repository</string>
    <string name="title_activity_supported_cloud">SupportedCloud</string>
    <string name="connect_cloud_service">CONNECT A CLOUD SERVICE</string>

    <!--fields for supported repository name-->
    <string name="name_dropbox">DropBox</string>
    <string name="name_onedrive">OneDrive</string>
    <string name="name_msonedrive">MicrosoftOneDrive</string>
    <string name="name_sharepoint">SharePoint</string>
    <string name="name_sharepointonline">SharePoint Online</string>
    <string name="name_googledrive">GoogleDrive</string>

    <!--fields for error message -->
    <string name="down_load_failed">the download is failed,would you retry it again?</string>
    <string name="rightmenu_download_failed">This operation couldn\'t be completed, because download file failed, please try again later</string>
    <string name="decrypt_failed">decrypt nxl file failed</string>
    <string name="invalid_file_parameter">the file parameter is invalid</string>
    <string name="not_nxl_file">the file is not nxl file</string>
    <string name="rings_is_empty">can not get the rings</string>
    <string name="keyBlob_is_empty">can not get the keyBlob</string>
    <string name="tags_is_empty">can not get the tags</string>
    <string name="file_is_null_or_not_exist">the file is null or not exist</string>
    <string name="intent_is_null">the intent is null</string>
    <string name="intent_not_match">the intent can not match</string>
    <string name="pdf_not_render">can not render the pdf</string>
    <string name="office_not_render">can not render the office</string>
    <string name="upload_file_failed">Upload this file failed, please check the network.</string>
    <string name="reclassify_file_failed">reclassify failed since RMS was changed.</string>

    <!--fields for help-->
    <string name="help_log">NXL File viewer</string>
    <string name="help_contact_us">Contact Us</string>
    <string name="help_company_name">NEXTLABS</string>

    <string name="myaccount">My Account</string>
    <string name="help">Help</string>

    <string name="help_app_name">Help Page</string>

    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="what_new">What\'s New</string>
    <string name="handbook">Handbook</string>
    <string name="online">Online Support Forum</string>
    <string name="title_activity_handbook">Handbook</string>
    <string name="title_activity_mupdf">Pdf</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="title_activity_initial">InitialActivity</string>
    <string name="loading">Loading...</string>


    <string name="title_activity_login">LoginActivity</string>

    <string name="textView_userName">username:</string>
    <string name="textView_password">password:</string>
    <string name="textView_url">url:</string>
    <string name="title_activity_classify">ClassifyActivity</string>

    <string name="orbit_button">Orbit Button</string>
    <string name="zoom_area_button">Zoom Area Button</string>
    <string name="select_button">Select Button</string>
    <string name="select_area_button">Select Area Button</string>
    <string name="fly_button">Fly</string>
    <string name="operators">Operators</string>
    <string name="modes">Modes</string>
    <string name="user_code">User Code</string>

    <string name="ss">SS</string>
    <string name="sm">SM</string>
    <string name="hl">HL</string>
    <string name="fr">FR</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="title_activity_profileinfo">ProfileinfoActivity</string>
    <string name="title_activity_profileinfo_commonattribute">Profileinfo_commonattribute</string>
    <string name="title_activity_Profileinfo_tagActivity">Profileinfo_tags</string>
    <string name="title_activity_profileinfo_rights">Profileinfo_rights</string>
    <string name="title_activity_welcom">WelcomActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login_tab">LoginTabActivity</string>

    <string name="title_popup_dialog">NextLabs</string>
    <string name="are_you_sure_delete_server">Are you sure want to delete the repository?</string>
    <string name="are_you_sure_clean_cache">Are you sure want to delete cache files?</string>
    <string name="out_of_memory">Out of memory during layout</string>
    <string name="are_you_sure_exit_login">Are you sure you want to exit?</string>
    <string name="uploading">Uploading...</string>
    <string name="dialog_rename_msg">The file with same name exist, please rename the file</string>
    <string name="dialog_edit_msg">Please input new tenant ID:</string>
    <string name="file_format_not_supported">This file format is not supported!</string>
    <string name="format_not_supported_use_other_open">This file format is not supported, please open it using other app!</string>
    <string name="setting_timeout_error">The value of session timeout can not be zero</string>
    <string name="no_view_right">you have no view right!</string>
    <string name="version_">version</string>

    <string name="no_media_warning">Storage media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="dismiss">Dismiss</string>
    <string name="version">1.8 (git build)</string>
    <string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
    <string name="parent_directory">[Up one level]</string>
    <string name="not_supported">Not supported</string>
    <string name="no_further_occurrences_found">No further occurrences found</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching&#8230;</string>
    <string name="okay">Okay</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Reset">Reset</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Edit">Edit</string>
    <string name="SignIn">Sign In</string>
    <string name="cannot_open_document">Cannot open document</string>
    <string name="cannot_open_document_Reason">Cannot open document: %1$s</string>
    <string name="enter_password">Enter password</string>
    <string name="print_failed">Print failed</string>
    <string name="entering_reflow_mode">Entering reflow mode</string>
    <string name="leaving_reflow_mode">Leaving reflow mode</string>
    <string name="format_currently_not_supported">Format currently not supported</string>
    <string name="toggle_links">Highlight and enable links</string>
    <string name="toggle_reflow_mode">Toggle reflow mode</string>
    <string name="outline_title">Table of Contents</string>
    <string name="accept">Accept</string>
    <string name="edit_annotations">Edit annotations</string>
    <string name="copy_text_to_the_clipboard">Copy text to the clipboard</string>
    <string name="print">Print</string>
    <string name="search_document">Search document</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
    <string name="copy">Copy</string>
    <string name="strike_out">Strike-out</string>
    <string name="highlight">Highlight</string>
    <string name="underline">Underline</string>
    <string name="ink">Ink</string>
    <string name="save">Save</string>
    <string name="proof">Proof</string>
    <string name="separation">Separation</string>
    <string name="select_text">Select text</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="no_text_selected">No text selected</string>
    <string name="draw_annotation">Draw annotation</string>
    <string name="nothing_to_save">Nothing to save</string>
    <string name="document_has_changes_save_them_">Document has changes. Save them?</string>
    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="cannot_open_buffer">Cannot open buffer</string>
    <string name="fill_out_text_field">Fill out text field</string>
    <string name="choose_value">Choose value</string>
    <string name="copy_text">copy text</string>
    <string name="title_activity_load_profile">LoadProfileActivity</string>
    <string name="title_activity_repository_detail">RepositoryDetailActivity</string>

    <string name="name_repository_info">REPOSITORY INFORMATION</string>
    <string name="name_repository_type">Repository Type</string>
    <string name="name_repository_userName">User Name</string>
    <string name="name_repository_email">Email</string>
    <string name="name_repository_totalSpace">Total Space</string>
    <string name="name_repository_usedSpace">Used Space</string>
    <string name="name_repository_localUsage">LOCAL USAGE</string>
    <string name="name_repository_offlineSize">Offline Size</string>
    <string name="name_repository_cacheSize">Cache Size</string>
    <string name="name_repository_totalSize">Total Size</string>
    <string name="name_repository_cleanCache">Clean Cache</string>
    <string name="name_repository_deleteRepository">Delete Repository</string>
    <string name="name_get_repository_info">Can\'t get the repository information, please check then retry it later.</string>
    <string name="title_activity_new_login">NewLoginActivity</string>
</resources>
