<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/simpleShadowButton"
        android:onClick="toolbarButtonPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/ss" />

    <Button
        android:id="@+id/smoothButton"
        android:onClick="toolbarButtonPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/simpleShadowButton"
        android:text="@string/sm" />

    <Button
        android:id="@+id/hiddenLineButton"
        android:onClick="toolbarButtonPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/smoothButton"
        android:text="@string/hl" />

       <Button
        android:id="@+id/frameRateButton"
        android:onClick="toolbarButtonPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/hiddenLineButton"
        android:text="@string/fr" />
    
</RelativeLayout>