<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:id="@+id/protect_ui">

    <RelativeLayout
        android:id="@+id/protect"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/relative_layout_style"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/protect_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:drawableLeft="@drawable/file_category_back"
            android:drawableStart="@drawable/file_category_back"
            android:text="@string/back"
            android:textColor="#339966"
            android:enabled="true"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/protect_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/PROTECT"
            android:ellipsize="middle"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/normal_text_color"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:paddingRight="20dp"
            />

        <TextView
            android:id="@+id/file_protect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/protect"
            android:textColor="#339966"
            android:textSize="18sp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout_protect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/protect"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/apply_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/apply_file"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/fileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:singleLine="true"
            android:ellipsize="middle"
            android:text=""
            android:textColor="@color/normal_text_color"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/content"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/linearLayout_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/cb_view"
                android:textColor="@color/normal_text_color"
                />
            <CheckBox
                android:id="@+id/cb_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/cb_edit"
                android:textColor="@color/normal_text_color"
                />
            <CheckBox
                android:id="@+id/cb_print"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/cb_print"
                android:textColor="@color/normal_text_color"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/collaboration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/collaboration"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/linearLayout_collaboration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/cb_share"
                android:textColor="@color/normal_text_color"
                />
            <CheckBox
                android:id="@+id/cb_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/cb_download"
                android:textColor="@color/normal_text_color"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/effect"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/cb_watermark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cb_watermark"
            android:textColor="@color/normal_text_color"
            />

    </LinearLayout>

</RelativeLayout>