<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    >

    <RelativeLayout
        android:id="@+id/profile_settings_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:background="@drawable/home_item_whitebk"

        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/profile_settings_button"
            android:layout_toStartOf="@+id/profile_settings_button"
            android:orientation="vertical">
            <TextView
                android:id="@+id/profile_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="#4C4E64"
                android:textSize="16sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/profile_settings"/>

        </RelativeLayout>

        <Button
            android:id="@+id/profile_settings_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/home_session_forward"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_account_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@drawable/home_item_whitebk"
        android:layout_below="@+id/profile_settings_layout"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/profile_account_button"
            android:layout_toStartOf="@+id/profile_account_button"
            android:orientation="vertical">
            <TextView
                android:id="@+id/profile_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="#4C4E64"
                android:textSize="16sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/profile_account"/>

        </RelativeLayout>

        <Button
            android:id="@+id/profile_account_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/home_session_forward"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_help_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@drawable/home_item_whitebk"
        android:layout_below="@+id/profile_account_layout"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/profile_help_button"
            android:layout_toStartOf="@+id/profile_help_button"
            android:orientation="vertical">
            <TextView
                android:id="@+id/profile_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="#4C4E64"
                android:textSize="16sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/profile_help"/>

        </RelativeLayout>

        <Button
            android:id="@+id/profile_help_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/home_session_forward"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_signoff_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:background="@drawable/home_item_whitebk"
        android:layout_below="@+id/profile_help_layout"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:orientation="vertical">
            <TextView
                android:id="@+id/profile_signoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="#4C4E64"
                android:textSize="16sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/profile_signoff"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>